# seraphim

./: .clang-format  .clang-tidy  .doxyfile  .travis.sh  .travis.yml  CMakeLists.txt  COPYRIGHT.txt  Dockerfile  LICENSE.txt  Makefile  seraphim-config.cmake  seraphim.pc.cmakein
benchmarks/: CMakeLists.txt
benchmarks/core/: CMakeLists.txt  main.cpp  matrix_core_conv.hpp  matrix_core_ops.hpp  matrix_ops.cpp
samples/car/: CMakeLists.txt  linear_lane_detector.cpp
samples/common/: CMakeLists.txt  optparse.h  optparse.hpp
samples/core/: CMakeLists.txt  grayscale.cpp  matrix_ops.cpp
samples/face/: CMakeLists.txt  dnn_face_detector.cpp  hog_face_detector.cpp  kazemi_facemark_detector.cpp  lbf_facemark_detector.cpp  lbp_face_detector.cpp
samples/gui/: CMakeLists.txt  gl_window.cpp  glfw_window.cpp  opencv_window.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/backend/: CMakeLists.txt  config_store.cpp  config_store.h  config_store.hpp  dummy.cpp  main.cpp  server.h  server.hpp  service.h  service.hpp  shm_server.cpp  shm_server.h  shm_server.hpp  tcp_server.cpp  tcp_server.h  tcp_server.hpp
src/apps/backend/car/: CMakeLists.txt  lane_detector_service.cpp  lane_detector_service.h  lane_detector_service.hpp
src/apps/backend/common/: CMakeLists.txt  utils.cpp  utils.h  utils.hpp
src/apps/backend/face/: CMakeLists.txt  detector_lbp_service.cpp  detector_lbp_service.h  detector_service.cpp  detector_service.h  face_detector_service.cpp  face_detector_service.h  face_detector_service.hpp  face_recognizer_service.cpp  face_recognizer_service.h  face_recognizer_service.hpp  facemark_detector_service.cpp  facemark_detector_service.h  facemark_detector_service.hpp  recognizer_service.cpp  recognizer_service.h
src/apps/backend/object/: CMakeLists.txt  classifier_service.cpp  classifier_service.h  detector_service.cpp  detector_service.h  detector_service.hpp
src/apps/frontend/: CMakeLists.txt
src/apps/frontend/car/: CMakeLists.txt  main.cpp  qml.qrc  qtquickcontrols2.conf
src/apps/frontend/car/qml/: main.qml
src/apps/frontend/car/ui/: MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/apps/frontend/common/: CMakeLists.txt  ImageUtilsQt.h
src/apps/frontend/common/ICaptureStream/: ICaptureStream.h  ICaptureStream.hpp
src/apps/frontend/common/QCameraCaptureStream/: QCameraCaptureStream.cpp  QCameraCaptureStream.h  QCameraCaptureStream.hpp
src/apps/frontend/common/QImageProvider/: QImageProvider.cpp  QImageProvider.h  QImageProvider.hpp
src/apps/frontend/common/QVideoCaptureStream/: QVideoCaptureStream.cpp  QVideoCaptureStream.h  QVideoCaptureStream.hpp
src/apps/frontend/common/V4L2CaptureStream/: V4L2CaptureStream.cpp  V4L2CaptureStream.h  V4L2CaptureStream.hpp  v4l2_device.cpp  v4l2_device.h  v4l2_device.hpp
src/apps/frontend/face/: CMakeLists.txt  main.cpp  qml.qrc
src/apps/frontend/face/FaceStorage/: FaceStorage.cpp  FaceStorage.h  FaceStorage.hpp
src/apps/frontend/face/qml/: main.qml
src/apps/frontend/face/ui/: MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/apps/frontend/object/: CMakeLists.txt  qml.qrc
src/apps/frontend/object/qml/: main.qml
src/apps/frontend/object/ui/: MainWindow.cpp  MainWindow.h  MainWindow.hpp  coco.h
src/lib/: CMakeLists.txt
src/lib/car/: CMakeLists.txt  linear_lane_detector.cpp
src/lib/car/data/: CMakeLists.txt  LaneDetector.proto
src/lib/car/include/seraphim/: car.h  car.hpp
src/lib/car/src/: ez_lane_detector.cpp  linear_lane_detector.cpp  module.cpp
src/lib/core/: CMakeLists.txt  image.cpp  image_converter.cpp
src/lib/core/include/seraphim/: computable.h  computable.hpp  core.h  core.hpp  except.hpp  image.h  image.hpp  image_converter.h  image_converter.hpp  matrix.h  matrix.hpp  matrix_ops.h  memory.h  memory.hpp  module.hpp  pixel.h  pixel.hpp  pixelformat.h  pixelformat.hpp  point.h  point.hpp  polygon.h  polygon.hpp  size.h  (+3 more)
src/lib/core/src/: image.cpp  image_buffer.cpp  image_buffer_converter.cpp  image_converter.cpp
src/lib/face/: CMakeLists.txt  hog_face_detector.cpp  kazemi_facemark_detector.cpp  lbf_facemark_detector.cpp  lbp_face_detector.cpp  lbp_face_recognizer.cpp  utils.cpp
src/lib/face/data/: CMakeLists.txt  FaceRecognizer.proto  FacemarkDetector.proto  Types.proto
src/lib/face/src/: hog_face_detector.cpp  kazemi_facemark_detector.cpp  lbf_facemark_detector.cpp  lbp_detector.cpp  lbp_face_detector.cpp  lbp_face_recognizer.cpp  lbp_recognizer.cpp  module.cpp
src/lib/gui/: CMakeLists.txt  gl_window.cpp  glad.c  glfw_window.cpp  opencv_window.cpp  window_factory.cpp
src/lib/gui/src/: gl_window.cpp  glad.c  module.cpp
src/lib/iop/: CMakeLists.txt
src/lib/iop/opencv/: mat.cpp
src/lib/iop/qt/: qimage.cpp
src/lib/iop/src/: module.cpp
src/lib/ipc/: CMakeLists.txt  semaphore.cpp  shm_transport.cpp  tcp_transport.cpp  transport_factory.cpp
src/lib/ipc/data/: CMakeLists.txt  FaceDetector.proto  FaceRecognizer.proto  FacemarkDetector.proto  LaneDetector.proto  ObjectClassifier.proto  Seraphim.proto  Types.proto
src/lib/ipc/net/: socket.cpp  tcp_socket.cpp  udp_socket.cpp
src/lib/ipc/src/: module.cpp  semaphore.cpp  shm_transport.cpp  tcp_transport.cpp  transport_factory.cpp
src/lib/object/: CMakeLists.txt  dnn_classifier.cpp  dnn_detector.cpp  kcf_tracker.cpp
src/lib/object/data/: CMakeLists.txt  ObjectClassifier.proto  ObjectDetector.proto
src/lib/object/src/: dnn_classifier.cpp  module.cpp
src/samples/: CMakeLists.txt
src/samples/car/: CMakeLists.txt  ez_lane_detector.cpp  linear_lane_detector.cpp
src/samples/core/: CMakeLists.txt  grayscale.cpp
src/samples/face/: CMakeLists.txt  dnn_face_detector.cpp  hog_face_detector.cpp  kazemi_facemark_detector.cpp  lbf_facemark_detector.cpp  lbp_face_detector.cpp
src/samples/gui/: CMakeLists.txt  gl_window.cpp
src/samples/object/: CMakeLists.txt  dnn_classifier.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  image.cpp  image_converter.cpp  matrix.cpp  matrix_core.cpp  matrix_core_conv.cpp  matrix_core_ops.cpp  matrix_ops.cpp  memory.cpp  pixel.cpp  point.cpp  polygon.cpp  threading.cpp
(+134 files in other folders)
